overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@
 /* NAVBAR */
 
 .navbar {
+  overflow: initial;
   position: absolute;
   background-color: transparent;
   width: 100%;
